syntax = "proto3";

option go_package = "./;generated";

package users.v1;

import "user.proto";

message AddUserResponse {
  User user = 1;
}
