syntax = "proto3";

option go_package = "./;generated";

package users.v1;

message DeleteUserRequest {
  string id = 1; // uuidv4
}
