syntax = "proto3";

option go_package = "./;generated";

package users.v1;

message DeleteUserResponse {}
